--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.79.4"
   },
   "devDependencies": {
